build(spark-4): target JDK 25 directly; custom JDK 25 docker image for tutorial
Master's root pom already raised the Java baseline to JDK 25
(jdk.version=25, requireJavaVersion [25,)), and the Spark 3/4 modules set no
per-module --release, so they already inherit JDK 25 and compile to class file
69. This commit removes the now-stale "JDK 21" gating language left over from
when the Spark 4 modules were JDK-21-only:

- root + connector/batch-ingestion parent poms + spark-4 module poms: JDK 21+ ->
  JDK 25+, release=21 -> release=25 (inherited from ${jdk.version}).
- spark-3/spark-4 READMEs: JDK 21 -> 25, class file 65 -> 69, and note that
  Spark 3.5.x predates official JDK 25 support (may need --add-opens/--add-exports).
- end-to-end docker tutorial: the published apache/spark:4.1.1 images ship only
  java17/java21 variants (no java25), so replace the "pull java21 image" step
  with a small custom Dockerfile that layers Temurin JDK 25 onto the java21 base
  and repoints JAVA_HOME; retag to spark4-jdk25:local.

Verified on JDK 25: enforce-java-version [25,) passes; both modules compile to
class file 69; pinot-spark-4-connector 57/57 tests and
pinot-batch-ingestion-spark-4 4/4 tests (incl. embedded SparkContext + netty 4.2
NettyRpcEnv) pass; spark-3-connector compiles clean.