@@ -30,19 +30,22 @@ should plan their migration during this release cycle.
 
 ## Runtime requirements (this release)
 
-Pinot's master branch raised the Java baseline to JDK 21, which means the
+Pinot's master branch raised the Java baseline to JDK 25, which means the
 `pinot-batch-ingestion-spark-3` jar (and the `pinot-core` / `pinot-common` classes it bundles
-transitively) is now compiled to class file 65 (JDK 21 bytecode). To run it you need:
+transitively) is now compiled to class file 69 (JDK 25 bytecode). To run it you need:
 
-- **JDK 21 or newer** on your Spark application JVM (driver and executors).
+- **JDK 25 or newer** on your Spark application JVM (driver and executors).
 - **Apache Spark 3.5.5 or newer** — Spark 3.5.5+ added official JDK 21 support; earlier Spark
-  3.5.x patch releases and Spark 3.4.x will refuse to start on JDK 21 with
-  `IllegalArgumentException: Unsupported class file major version 65`.
+  3.5.x patch releases and Spark 3.4.x will refuse to start on modern JDKs with
+  `IllegalArgumentException: Unsupported class file major version 69`. Note that Spark 3.5.x
+  predates official JDK 25 support, so you may additionally need Spark JVM flags
+  (`--add-opens`/`--add-exports`) to launch it on JDK 25; consider migrating to
+  `pinot-batch-ingestion-spark-4` for a fully supported JDK 25 stack.
 
-If your deployment is stuck on Spark 3.5.x with JDK 17, **stay on the previous Pinot release
-(`1.5.x`) for this jar** until you can either upgrade to JDK 21 / Spark 3.5.5+ or migrate to
-`pinot-batch-ingestion-spark-4`. Mixing a 1.6+ jar with a JDK 17 Spark runtime will fail with
-`UnsupportedClassVersionError` at first class resolution.
+If your deployment is stuck on Spark 3.5.x with JDK 17 or JDK 21, **stay on the previous Pinot
+release (`1.5.x`) for this jar** until you can either upgrade to JDK 25 / Spark 3.5.5+ or
+migrate to `pinot-batch-ingestion-spark-4`. Mixing a 1.6+ jar with a JDK 17 or JDK 21 Spark
+runtime will fail with `UnsupportedClassVersionError` at first class resolution.
 
 ## Migration path to Spark 4
 
@@ -56,4 +59,5 @@ under the `org.apache.pinot.plugin.ingestion.batch.spark4` package, and the
 2. Update any explicit class references in your job spec from
    `org.apache.pinot.plugin.ingestion.batch.spark3.*` to
    `org.apache.pinot.plugin.ingestion.batch.spark4.*`.
-3. Switch your Spark cluster from Spark 3.5.x to Spark 4.0.x (Spark 4 requires JDK 17+).
+3. Switch your Spark cluster from Spark 3.5.x to Spark 4.1.x (the `pinot-batch-ingestion-spark-4`
+   jar is JDK 25 bytecode, so run it on JDK 25+).
